<resources>
    <string name="app_name">Отметь смену</string>
    <string name="action_settings">Settings</string>
    <string name="select_days">Выбрать рабочие дни</string>
    <string name="select_days_activ">Сохранить</string>
    <string name="mon_day">пн</string>
    <string name="tue_dat">вт</string>
    <string name="wen_day">ср</string>
    <string name="thu_day">чт</string>
    <string name="fri_day">пт</string>
    <string name="sat_day">сб</string>
    <string name="sun_day">вс</string>


    <string name="title_activity_day_settings">Settings</string>

    <string name="default_settings">Настройки</string>
    <string name="set_message_to_settings">Задайте шаблон</string>

    <string name="start_time">Начало смены</string>
    <string name="end_time">Конец смены</string>
    <string name="tips">Чаевые</string>
    <string name="amount">Выручка</string>
    <string name="mph">З/П в час</string>
    <string name="incr_hour">+/- час</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="unsave">Отменить</string>
    <string name="depressia">Депремии</string>
    <string name="accept_pathern">Шаблон сохранен</string>
    <string name="for_hour">ЗП за часы: </string>
    <string name="for_percent">ЗП за проценты: </string>
    <string name="for_tips">Чаевые: </string>
    <string name="hours">Часы: </string>
    <string name="all">Итог: </string>
    <string name="report">Отчет </string>
    <string name="premium">Премия </string>


    <string name="add_premium">Добавить премию </string>
    <string name="remove_premium">Добавить депремию </string>
    <string name="non_many">Введите сумму</string>
    <string name="template">Изменить шаблон</string>
    <string name="title_activity_settings">Settings</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="salary">Оклад</string>
    <string name="logout">Выйти</string>


</resources>
