<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.bignerdranch.shiftmark.MainActivity">

    <LinearLayout
        android:id="@+id/hour_cont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cw">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hours"
            android:textColor="@color/textColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:textColor="@color/textColor"
            android:id="@+id/hours"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="часы"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/mph_cont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hour_cont">

        <TextView
            android:textColor="@color/textColor"
            android:id="@+id/textView6"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/for_hour"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:textColor="@color/textColor"
            android:id="@+id/for_hour"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="за часы"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/salary_cont"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mph_cont">

        <TextView
            android:textColor="@color/textColor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/salary"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:textColor="@color/textColor"
            android:id="@+id/salary"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="оклад"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tips_cont"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salary_cont">

        <TextView
            android:textColor="@color/textColor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tips"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:textColor="@color/textColor"
            android:id="@+id/tips"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="чай"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/percent_cont"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tips_cont">

        <TextView
            android:textColor="@color/textColor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/for_percent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:textColor="@color/textColor"
            android:id="@+id/for_percent"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="за проценты"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


    </LinearLayout>

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:background="@color/theme"
        android:id="@+id/cw"
        android:layout_width="0dp"
        android:layout_height="258dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mcv_arrowColor="@color/colorWhite"
        app:mcv_tileHeight="match_parent">

    </com.prolificinteractive.materialcalendarview.MaterialCalendarView>


    <LinearLayout
        android:visibility="gone"
        android:id="@+id/prem_cont"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percent_cont">

        <TextView
            android:textColor="@color/textColor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/premium"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:textColor="@color/textColor"
            android:id="@+id/premium"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="премия"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/all_cont"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prem_cont">

        <TextView
            android:textColor="@color/textColor"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:textColor="@color/textColor"
            android:id="@+id/all"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="итог"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
